fix: change contact-form + progress bar bg color for better contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,7 @@ h1, h2, h3 {
 }
 
 .contact {
-    background-color: #DFE2E0;
+    background-color: #F2F6F8;
 }
 
 .quotes label {
